--- a/_posts/2022-12-09-54.md
+++ b/_posts/2022-12-09-54.md
@@ -7,7 +7,7 @@ img: "54"
 tags: "openai", "ai", "stackoverflow", "twitter"
 spreaker: 52133568
 ---
-Patoarchitekci rozmawiają m. in. o OpenAI. Sztuczna inteligencja rzekomo potrafi już wygenerować nie tylko tweety, ale i sprawne fragmenty kodu. Jak to wygląda w praktyce? Przekonaj się sam!
+Patoarchitekci rozmawiają m. in. o OpenAI. Sztuczna inteligencja rzekomo potrafi już wygenerować nie tylko tweety, ale i sprawne fragmenty kodu. Jak to wygląda w praktyce? Przekonaj się sam :D
 
 Ciekawe linki i inne znaleziska z tego odcinka:
 
